tests/ui/bitfield/field_out_of_bounds.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/field_out_of_bounds.rs:6:24
  |
6 | struct BitField(#[field(250, 2)] Field); // Can only store bits between 0 - (sizeof(usize) * 8).
  |                        ^ the evaluated program panicked at 'Field exceeds the bitfield size', $DIR/tests/ui/bitfield/field_out_of_bounds.rs:6:24
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
